--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-date-range": "^2.0.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
