--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-date-range": "^2.0.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
